--- a/mkdocs/themes/readthedocs/css/base.css
+++ b/mkdocs/themes/readthedocs/css/base.css
@@ -40,6 +40,10 @@ h1, h2, h3 {
     color: #444;
 }
 
+ul {
+    list-style-type:none;
+}
+
 h1[id]:before, h2[id]:before, h3[id]:before, h4[id]:before, h5[id]:before, h6[id]:before {
     content: "";
     display: block;
