--- a/mkdocs/themes/readthedocs/css/theme_extra.css
+++ b/mkdocs/themes/readthedocs/css/theme_extra.css
@@ -5,9 +5,17 @@ html {
     font-size: 90%;
 }
 
+body {
+    font-size: 100%;
+}
+
 h3, h4, h5, h6 {
     color: #2980b9;
     font-weight: 300
+}
+
+ul {
+    list-style-type:none;
 }
 
 /*
@@ -35,10 +43,8 @@ h3, h4, h5, h6 {
  *
  * https://github.com/mkdocs/mkdocs/pull/202
  */
-.wy-nav-side {
-    height: 100%;
-    overflow-y: auto;
-}
+
+
 
 /*
  * readthedocs theme hides nav items when the window height is
