--- a/mkdocs/themes/readthedocs/css/theme_extra.css
+++ b/mkdocs/themes/readthedocs/css/theme_extra.css
@@ -26,15 +26,31 @@ ul {
  */
 .wy-menu-vertical span {
     line-height: 18px;
-    padding: 0.4045em 1.618em;
+    font-size: 16px;
     display: block;
     position: relative;
     font-size: 90%;
     color: #838383;
 }
 
-.wy-menu-vertical .subnav a {
-    padding: 0.4045em 2.427em;
+
+li .toctree-l1{
+    display: none;
+}
+
+.subnavli{
+  background: #EEEEEE;
+  width: 200px;
+}
+
+.subnavli a{
+  font-size: 14px;
+}
+  
+
+.wy-menu-vertical ul li{
+  background: #EEEEEE;
+  width: 200px;
 }
 
 /*
