fix the top nav,left nav,right nav

--- a/mkdocs/themes/readthedocs/css/base.css
+++ b/mkdocs/themes/readthedocs/css/base.css
@@ -1,7 +1,7 @@
 body {
     background: url(../img/grid.png) repeat-x;
     background-attachment: fixed;
-    background-color: #f8f8f8;
+
 }
 
 body > div.container {
@@ -17,7 +17,8 @@ div.col-md-3 {
 }
 
 div.col-md-9 {
-    padding-bottom: 100px;
+    padding-bottom: 10px;
+    padding-top: 82px;
 }
 
 div.source-links {
@@ -30,9 +31,8 @@ div.col-md-9 img {
     padding: 4px;
     line-height: 1.428571429;
     background-color: #fff;
-    border: 1px solid #ddd;
     border-radius: 4px;
-    margin: 20px auto 30px auto;
+    margin: auto;
 }
 
 h1, h2, h3 {
@@ -41,14 +41,6 @@ h1, h2, h3 {
 
 ul {
     list-style-type:none;
-}
-
-h1[id]:before, h2[id]:before, h3[id]:before, h4[id]:before, h5[id]:before, h6[id]:before {
-    content: "";
-    display: block;
-    margin-top: -75px;
-    height: 75px;
-    pointer-events: none;
 }
 
 h1 {
@@ -67,7 +59,6 @@ hr {
 pre, .rst-content tt {
     max-width: 100%;
     background: #fff;
-    border: solid 1px #e1e4e5;
     color: #e74c3c;
     overflow-x: auto;
 }
@@ -202,7 +193,6 @@ h1:hover .headerlink, h2:hover .headerlink, h3:hover .headerlink, h4:hover .head
 .admonition {
     padding: 15px;
     margin-bottom: 20px;
-    border: 1px solid transparent;
     border-radius: 4px;
     text-align: left;
 }
@@ -255,10 +245,6 @@ h1:hover .headerlink, h2:hover .headerlink, h3:hover .headerlink, h4:hover .head
     float: right;
     width: 0;
     height: 0;
-    border-color: transparent;
-    border-style: solid;
-    border-width: 5px 0 5px 5px;
-    border-left-color: #ccc;
     margin-top: 5px;
     margin-right: -10px;
 }
