--- a/mkdocs/themes/readthedocs/css/theme_extra.css
+++ b/mkdocs/themes/readthedocs/css/theme_extra.css
@@ -7,6 +7,9 @@ html {
 
 body {
     font-size: 100%;
+    background: #FFFFFF;
+    min-height: 100%;
+    font-family: "Helvetica Neue",Helvetica,"PingFang SC","Microsoft Yahei",Arial,Verdana,sans-serif;
 }
 
 h3, h4, h5, h6 {
@@ -14,94 +17,299 @@ h3, h4, h5, h6 {
     font-weight: 300
 }
 
-.subnavli {
+.container-fluid{
+  top:0;
+  height: 60px;
+  width: 100%;
+  background-color: #f8f8f8;
+  border-bottom-width:2px;
+  border-bottom-style: solid;
+  border-bottom-color:#e5e5e5;
+  margin-bottom: 32px;
+  z-index:99;
+  position: fixed;
 }
 
-/*
- * Sphinx doesn't have support for section dividers like we do in
- * MkDocs, this styles the section titles in the nav
- *
- * https://github.com/mkdocs/mkdocs/issues/175
- */
-.wy-menu-vertical span {
-    line-height: 18px;
-    font-size: 16px;
-    display: block;
-    position: relative;
-    font-size: 90%;
-    color: #838383;
+.container{
+  max-width:1200px;
 }
 
-
-li .toctree-l1{
-    display: none;
+#doc-icon{
+  float: left;
+  margin: 10px;
 }
 
-.nav{
-  list-style-type: none;
-}
-
-.subnavli{
-  background: #EEEEEE;
-  width: 200px;
-}
-
-.wy-menu-vertical ul .subnavli_single a{
-  font-size: 16px;
-  padding-left: 16px;
-}
-
-.wy-menu-vertical ul .subnavli a{
-  font-size: 16px;
-  padding-left: 16px;
-}
-  
-
-.wy-menu-vertical ul li{
-  background: #EEEEEE;
-  width: 200px;
-}
-
-.header{
-  margin: 0px;
-}
-
-#home-url{
-  padding: 10px;
-}
-
-#home-url a{
-  font-size: 30px;
+#doc-icon a img{
+  height: 36px;
+  width: 130px;
 }
 
 #rtd-search-form{
-
+  width: 160px;
+  height: 30px;
+  border: 1px;
+  border-color: #c9c9c9;
+  margin: 20px;
 }
 
-/*
- * Long navigations run off the bottom of the screen as the nav
- * area doesn't scroll.
- *
- * https://github.com/mkdocs/mkdocs/pull/202
- */
-
-
-
-/*
- * readthedocs theme hides nav items when the window height is
- * too small to contain them.
- *
- * https://github.com/mkdocs/mkdocs/issues/#348
- */
-.wy-menu-vertical ul {
-  margin-bottom: 2em;
+#rtd-search-form  input{
+  width: 160px;
+  height: 30px;
 }
 
-/*
- * Fix wrapping in the code highlighting
- *
- * https://github.com/mkdocs/mkdocs/issues/233
- */
+.nav-tabs li {
+  width: 25%;
+  text-align: left;
+  margin:0px;
+}
+
+.header .nav-tabs li a{
+  color: #3a3a3a;
+  padding:15px;
+  border-style: none;
+  width: auto;
+  display: inline;
+}
+
+.nav-tabs li a:hover{
+  background-color: #f8f8f8;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #1b75bb;
+}
+
+.header ul{
+    padding: 0px;
+    margin-top: 15px;
+    margin-bottom: 0px;
+}
+
+.nav-tabs{
+    border-bottom:0px;
+}
+
+#navbar-left{
+    margin-top: 82px;
+    width: 250px;
+    height: 90%;
+    padding-bottom: 30px;
+    position:fixed;
+}
+
+.wy-menu {
+    overflow-x: hidden;
+    overflow-y: auto;
+    max-height: 90%;
+    width: 250px;
+    background: #f8f8f8;
+}
+
+.wy-menu::-webkit-scrollbar{
+    height: 4px;
+    width: 4px;
+}
+
+.wy-menu::-webkit-scrollbar-thumb {
+    background: rgba(0,0,0,.26);
+}
+
+.subnav{
+    min-height: 30px;
+}
+
+.subnav a{
+    list-style-type:none;
+    min-height: 30px;
+    font-size: 14px;
+    color:#666666;
+}
+
+
+.wy-menu li:first-child ul {
+    padding-top: 24px;
+    padding-bottom: 12px;
+}
+
+.wy-menu li:first-child ul li span a{
+    color: #1d75bb;
+    font-size: 16px;
+}
+
+.wy-menu  ul .subnavli_single{
+  padding-left: 10px;
+  height: 30px;
+}
+
+.subnavli_single a{
+  padding-left: 16px;
+  display: block;
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+
+.wy-menu  ul .subnavli a{
+  padding-left: 16px;
+  display: block;
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+
+.wy-menu ul li{
+  width: 240px;
+}
+
+.subnavul .toctree-l1{
+    display: none;
+    height: 34px;
+    width: 100%;
+}
+
+.subnavul .toctree-l1 a{
+  margin-left: 40px;
+  display: block;
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+
+li .current{
+  background: #1d75bb;
+}
+
+li .current a{
+  color: #FFFFFF;
+}
+
+
+.subnavli{
+  min-height: 30px;
+  width: 220px;
+  padding-left: 10px;
+}
+
+.nav-icon{
+  margin-right: 20px;
+  min-height: 30px;
+  width: 30px;
+  float: right;
+  text-align: center;
+}
+
+.nav-icon  img{
+  max-width: 14px;
+  max-height: 14px;
+}
+
+#breadcrumbs{
+  border-style:none;
+}
+
+.rst-content {
+  margin-left: 15px;
+  margin-right: 15px;
+  word-break:break-all;
+}
+
+section{
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.section h1{
+  font-size: 28px;
+  color: #1b75bb;
+  font-weight: bold;
+  margin-top: 6px;
+}
+
+
+.section h2{
+  font-size: 24px;
+  color: #666666;
+  font-weight: bold;
+  padding-bottom: 4px;
+  margin-bottom: 24px;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color:#e5e5e5;
+  padding-top: 80px;
+  margin-top: -40px;
+}
+
+.section h3{
+  font-size: 18px;
+  color: #1b75bb;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.section h4{
+  font-size: 14px;
+  color: #3a3a3a;
+  font-weight: bold;
+}
+
+.section h5{
+  font-size: 14px;
+  color: #1b75bb;
+}
+
+.section p{
+  line-height: 24px;
+  font-size: 14px;
+  margin: 0px;
+}
+
+#tocright{
+  position:fixed;
+  margin-top: 82px;
+  width: 200px;
+  height: 90%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding-left: 10px;
+  
+}
+
+
+#tocright a{
+  font-size: 12px;
+  color: #666666;
+  margin: 2px;
+}
+
+#navbar-right{
+  border-left-width:2px;
+  border-left-style:solid;
+  border-left-color:#1d75bb;
+}
+
+#tocright::-webkit-scrollbar{
+    height: 4px;
+    width: 4px;
+}
+
+#tocright::-webkit-scrollbar-thumb {
+    background: rgba(0,0,0,.26);
+}
+
+#tocright p{
+  padding: 5px;
+}
+
+.nav li a{
+  padding: 5px 5px;
+}
+
+#navbar-right  .nav .active a{
+  font-size: 14px;
+  color: #1d75bb;
+}
+
+#tocright a:hover{
+  color: #1d75bb;
+  font-weight: bold;
+}
+
 code {
     white-space: pre;
 }
@@ -110,18 +318,18 @@ pre>code:before, .method-declaration code:before{
   content: "";
 }
 
+pre{
+  background-color: #fafafa;
+}
+
 pre code{
   color: #111111;
 }
 pre>code{
   border-left: 0px;
 }
-/*
- * Wrap inline code samples otherwise they shoot of the side and
- * can't be read at all.
- *
- * https://github.com/mkdocs/mkdocs/issues/313
- */
+
+
 p code {
     word-wrap: break-word;
 }
@@ -174,26 +382,24 @@ code.cs, code.c {
     border-color: #D1D4D5;
 }
 
-.wy-menu-vertical li ul {
+.wy-menu li ul {
     display: inherit;
 }
 
-.wy-menu-vertical li ul.subnav ul.subnav{
-    padding-left: 1em;
-}
 
-
-/*
- * Improve inline code blocks within admonitions.
- *
- * https://github.com/mkdocs/mkdocs/issues/656
- */
  div.admonition code {
   color: #404040;
   border: 1px solid rgba(0, 0, 0, 0.2);
   background: rgba(255, 255, 255, 0.7);
 }
 
+.subnavul li{
+  list-style-type: none;
+}
+
+.subnavul{
+  list-style-type: none;
+}
 
 .toctree-l1 {
     display: none;
